--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "ant-design-vue": "4.x",
     "axios": "^1.8.4",
+    "blueimp-md5": "^2.19.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
   },
